--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "antd": "^3.16.6",
     "bulma": "^0.7.1",
     "express": "^4.16.3",
+    "less": "2.7.3",
+    "less-loader": "^5.0.0",
     "opn": "^5.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
