--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1"
+    "react-swipe": "5.1.1",
+    "redux": "^4.0.1",
+    "swiper": "^4.5.0"
   }
 }
