--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "antd": "^3.17.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "core-js": "^2.6.8",
     "express": "^4.16.3",
     "opn": "^5.4.0",
     "react": "^16.5.2",
